# graph_search

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  graph_search.sln  last_test.json
benchmarks/: benchmark.cpp
data/: graph-15-0.2.json  graph-15-0.4.json  graph-15-0.6.json  graph-20-0.2.json
examples/: basic_usage.cpp  basic_usage2.cpp  custom_compare.cpp  fb_search.cpp  puff_building.cpp  puff_layers.cpp
examples/data/: fb.adjlist  last_test.txt
graph_search/: benchmark.hpp  graph.hpp  graph_impl.hpp  graph_manip.hpp  graph_match.hpp  graph_search.vcxproj  graph_search.vcxproj.filters  id_manager.hpp  last_test.json  main.cpp  node.hpp  print.hpp  puff.hpp  puff_info.hpp  random_graph.hpp  report-O0.json  report-O2.json  report.hpp  report_diagram.py  report_plot.py  report_plot2.py  report_plot3.py  save.json  sector.hpp  test-20-3-true.json  test-branch-1.json  test-branch-2.json  test-branch-3.json  tests.hpp
graph_search/include/: benchmark.hpp  data_pack.hpp  data_unit.hpp  data_unit_lex_order.hpp  generator.hpp  graph.hpp  graph_impl.hpp  graph_iterator.hpp  graph_manip.hpp  graph_match.hpp  graph_random.hpp  graph_search.hpp  level_builder.hpp  node.hpp  node_group.hpp  proxy_iterator.hpp  pseudonode.hpp  puff.hpp  puff_info.hpp  puff_statistics.hpp  report.hpp  sector.hpp  sorted_vector.hpp  tests.hpp  utility.hpp  vecset.hpp
graph_search/include/functors/: graph_functors.hpp  node_functors.hpp  node_lookup.hpp  sector_functors.hpp
graph_search/include/graph/: const_iterator.hpp  const_iterator.inl  const_node_iterator.hpp  const_node_iterator.inl  const_nodes_view.hpp  graph.hpp  graph.inl  iterator.hpp  iterator.inl  node_iterator.hpp  node_iterator.inl  nodes_view.hpp  random.hpp  random.inl
graph_search/include/graph/connection/: connection.hpp  connection.inl  connection_functors.hpp  connection_functors.inl  pseudoconnection.hpp  pseudoconnection.inl
graph_search/include/graph/node/: const_node_iterator.hpp  const_node_iterator.inl  const_nodes_view.hpp  node.hpp  node.inl  node_functors.hpp  node_functors.inl  node_iterator.hpp  node_iterator.inl  (+5 more)
graph_search/include/graph_search/: graph_match.hpp  graph_search.hpp  node_group.hpp  puff.hpp  puff.inl  sector.hpp  sector.inl
graph_search/include/level_builder/: build_result.hpp  level_builder.hpp  level_builder_1thread.hpp  level_builder_mthread.hpp  safe_sectors_view.hpp
graph_search/include/report/: data_pack.hpp  data_pack.inl  data_unit.hpp  data_unit_lex_order.hpp  report.hpp  report.inl
graph_search/include/util/: advance.hpp  assert.hpp  enviroment.hpp  generator.hpp  iterator.hpp
graph_search/inline/: build_result.inl  data_unit.inl  generator.inl  graph.inl  graph_manip.inl  graph_random.inl  graph_search.inl  level_builder.inl  level_builder_mthread.inl  node.inl  node_functors.inl  node_lookup.inl  puff.inl  report.inl  safe_sectors_view.inl  sector.inl  sector_functors.inl  sorted_vector.inl
graph_search/report/: report_plot-speed.py  report_plot5.py
graph_search/src/: benchmark.cpp  data_pack.cpp  data_unit.cpp  data_unit_lex_order.cpp  main.cpp
graph_search/zh/: mutate.hpp  mutate.inl
graph_search/zh/graph_search/: graph_match.hpp  graph_search.hpp  node_group.hpp  puff.hpp
graph_search/zh/report/: data_unit.hpp  data_unit.inl  report.hpp  report.inl
graph_search/zh/util/: generator.hpp  iterator.hpp  iterator.inl  json.hpp  json.inl  pretty_print.hpp
report/: report n{7, 8}p{0.1-0.9@0.1} + n{9, 10}p{0.1-0.5@0.1}.json  report-7.json  report-8.json  report-9-10.json  report-speed.json  report_plot-speed2.py
src/zh/: mutate.hpp  mutate.inl  test_search.hpp
src/zh/graph_search/: cluster.hpp  cluster.inl  graph_search.hpp  graph_search.inl  node_group.hpp  puff.hpp  puff.inl
src/zh/report/: data_pack.hpp  data_pack.inl  data_unit.hpp  data_unit_lex_order.hpp  data_unit_lex_order.inl  report.hpp  report.inl
src/zh/util/: generator.hpp  iterator.hpp  iterator.inl  json.hpp  json.inl
tests/: tests.cpp
(+33 files in other folders)
